gitops/manifests/leadsquared/ingress.yaml
# Ingress using a path with rewrite
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: leadsquared-gis-processor-ingress
  namespace: leadsquared
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
spec:
  tls:
  - hosts:
    - captainsteel.duckdns.org
    secretName: leadsquared-tls-secret
  rules:
  - host: captainsteel.duckdns.org
    http:
      paths:
      # The (.*) captures the rest of the path
      - path: /leadsquared
        pathType: Prefix
        backend:
          service:
            name: leadsquared-gis-processor-svc
            port:
              name: http
